# hzcc

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  build_pyrite.sh  part 4 raw results.txt  part 5 raw results 2.txt  part 5 raw results.txt  part 6 raw results 2.txt  part 6 raw results.txt  project 3 raw results.txt  vcpkg.json
Documentation/: CMakeLists.txt  adjcalc.sty  adjustbox.sty  collectbox.sty  developers.tex  diagbox.sty  doxygen.sty  hanging.sty  import.sty  listofitems.sty  listofitems.tex  p2e-pdftex.def  pict2e.sty  stackengine.sty  subfigure.sty  tc-pgf.def  trimclip.sty
Documentation/figure/: frontend_structure.xml
Source/: CMakeLists.txt  CompileContext.cc  CompileContext.h  const_msg.h  keywords.h  macro.h  main.cc  options.cc  options.h  test_main.cc  token_type.h  version.h.in
Source/AST/: ASTContext.cc  ASTContext.h  ASTNode.cc  ASTNode.h  ASTVisitor.h  CMakeLists.txt  CompilationUnit.cc  CompilationUnit.h  DeduceValue.cc  DeduceValue.h  SymbolTable.cc  SymbolTable.h  ast.h  ast_context.cc  ast_context.h  ast_node.cc  ast_node.h  ast_utils.cc  ast_utils.h  context.h  expr_node.cc  expr_node.h  function_node.h  prototype_node.h  type.h  value.cc  value.h  variable_attr.h
Source/codegen/: CMakeLists.txt  Generator.cc  Generator.h  IndentWriter.cc  IndentWriter.h  LabelManager.cc  LabelManager.h
Source/lexical/: CMakeLists.txt  LexicalParser.cc  LexicalToken.cc  LexicalToken.h  Preprocessor.cc  Token.cc  Token.h  keywords.h  lexical.h  lexical_limit.h  token_type.h
Source/optimization/: CMakeLists.txt  IPassManager.h  PassManager.h  PassManagerImpl.cc  PassManagerImpl.h
Source/optmization/: CMakeLists.txt  PassManager.cc  PassManager.h
Source/syntax/: CMakeLists.txt  Parser.h  SymbolTable.cc  SymbolTable.h  SyntaxContext.cc  SyntaxContext.h  SyntaxParser.cc  TokenList.cc  TokenList.h  operator_type.h  syntax.h  syntax_handler.h
Source/utils/: CMakeLists.txt  Status.h  auto_factory.h  fnv1a_hash.h  fs_utils.h  keywords_utils.h  logging.cc  logging.h  message_utils.cc  message_utils.h  type_name_utils.h
Test/: CMakeLists.txt  lit.site.cfg.py.in
Test/lexical/: comments_1.c  comments_2.c  comments_4.c  ex_char2.c  ex_char3.c.error1  ex_char3.c.extra.error1  ex_char4.c.error1  ex_char4.c.extra.error1  ex_char5.c  ex_int1.c  ex_int2.c  ex_int3.c  ex_int4.c  ex_real1.c  ex_real2.c  ex_real3.c  ex_real4.c  ex_str2.c  ex_str3.c  ex_trunc1.c  ex_trunc1.c.error1  ex_trunc1.c.extra.error1  ex_trunc2.c.extra.error1  ex_trunc4.c.extra.error1  hello.c  invalid1.c.extra.error1  invalid2.c.error1  invalid2.c.extra.error1  keywords_01.c  keywords_05.c  keywords_06.c  keywords_07.c  keywords_08.c  keywords_11.c  keywords_12.c  lineno1.c  lineno2.c  literals_03.c  literals_06.c  literals_07.c  (+16 more)
Test/part0/: lit.cfg.py  usage_message.test  version_message.test
Test/part1/: extra.c  hello.c  lit.cfg.py  pi.c  test1.c  test2.c  tricky.c
Test/part3/: Check_3.sh  array1.c  array1.c.output3  array2.c.output3  array3.c  array3.c.output3  array4.c.error3  array5.c  array5.c.error3  array5.c.extra.error3  assign1.c.output3  assign2.c.output3  assign3.c  assign3.c.output3  assign4.c.error3  assign5.c  assign5.c.error3  call1.c  call1.c.output3  call2.c.output3  call3.c  call3.c.error3  call3.c.extra.error3  call4.c  call4.c.error3  call4.c.extra.error3  call5.c.error3  call5.c.extra.error3  exprs1.c  exprs1.c.output3  exprs2.c  exprs2.c.output3  exprs3.c.output3  exprs4.c.output3  exprs5.c  exprs5.c.error3  exprs6.c.output3  exprs7.c.output3  exprs8.c  exprs8.c.output3  (+139 more)
Test/part4/: Check_4.sh  Jjczt0.error4  arith1.c.output4  arith2.c.output4  arith4.c.extra.error4  arith5.c.error4  arith6.c.extra.error4  array1.c.output4  array2.c.output4  array4.c.error4  assign1.c.output4  assign2.c.output4  assign3.c.extra.error4  assign4.c.error4  assign4.c.extra.error4  cast1.c.output4  cast2.c.output4  cast4.c.error4  cast4.c.extra.error4  extra1.c  extra1.c.error4  extra1.c.extra.output4  extra2.c  extra2.c.error4  extra2.c.extra.output4  extra3.c  extra4.c  extra4.c.error4  extra4.c.extra.output4  extra5.c.error4  extra5.c.extra.error4  fcall1.c.output4  fcall2.c  fcall2.c.extra.error4  fcall3.c  fcall3.c.extra.error4  fcall7.c.extra.error4  idents1.c.error4  idents2.c.error4  idents6.c.error4  (+63 more)
Test/syntax/: extra.c
Test/token_parsing/: comments_1.c  comments_2.c  comments_3.c  comments_4.c  comments_6.c  ex_char1.c  ex_char3.c  ex_char4.c  ex_char5.c  ex_int1.c  ex_int2.c  ex_int3.c  ex_int4.c  ex_real1.c  ex_real2.c  ex_real3.c  ex_real4.c  ex_str1.c  ex_str4.c.error1  ex_str4.c.extra.error1  ex_trunc1.c  ex_trunc2.c  ex_trunc2.c.error1  ex_trunc3.c  ex_trunc3.c.error1  ex_trunc3.c.extra.error1  ex_trunc4.c.error1  extra.c  hello.c  invalid1.c  invalid1.c.error1  invalid2.c  keywords_02.c  keywords_03.c  keywords_04.c  keywords_06.c  keywords_08.c  keywords_09.c  keywords_10.c  keywords_12.c  (+25 more)
Test/utils/: llvm_lit.py
hzcc/: CMakeLists.txt  const_msg.h  enums.h  macro.h  main.cc  options.cc  options.h  version.h.in
hzcc/ast/: CMakeLists.txt  CompilationUnit.cc  CompilationUnit.h  DeduceValue.cc  DeduceValue.h  Stmt.cc  Stmt.h  SymbTbl.cc  SymbTbl.h  visitor.h
hzcc/codegen/: CMakeLists.txt  Generator.h  IndentWriter.h  LabelManager.h
hzcc/optimization/: CMakeLists.txt  PassManager.h  PassManagerImpl.cc  PassManagerImpl.h
hzcc/parser/: CMakeLists.txt  parser.h  preprocessor.cc  semantic.h  semantic_analyzer.cc
hzcc/test/: CMakeLists.txt
hzcc/utils/: CMakeLists.txt  cached_list.h  concept_extra.h  constexpr_utils.h  factory.h  fnv1a_hash.h  fs_utils.h  logging.cc  logging.h  type_name_utils.h
test/: CMakeLists.txt  lit.site.cfg.py.in
test/compiler_info/: version_message.test
test/lexical/: comments_3.c  ex_char3.c  ex_char4.c  ex_char5.c  ex_int1.c  ex_int4.c  ex_real3.c  ex_real4.c  ex_str4.c  ex_trunc1.c  ex_trunc3.c  ex_trunc4.c  extra.c  hello.c  invalid1.c  invalid2.c  keywords_01.c  keywords_02.c  keywords_03.c  keywords_04.c  (+28 more)
testing/: CMakeLists.txt
(+949 files in other folders)
